--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ numpy==2.0.2
 pandas==2.2.3
 pydantic==2.11.3
 pydantic_core==2.33.1
+pytest
 python-dateutil==2.9.0.post0
 pytz==2025.2
 scikit-learn==1.6.1
