--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,7 @@ jobs:
 
     - name: Run tests
       run: |
+        export PYTHONPATH=$(pwd)/src
         pytest tests/
 
     - name: Log in to Amazon ECR
