--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,8 +32,10 @@ jobs:
 
     - name: Run tests
       run: |
-        export PYTHONPATH=$(pwd)/src
+        cd $GITHUB_WORKSPACE
+        export PYTHONPATH=$GITHUB_WORKSPACE/src
         pytest tests/
+
 
     - name: Log in to Amazon ECR
       id: login-ecr
